feat: pricing block

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@
   --border-color: #23303d;
   --card-background-color: #fff;
   --antiquewhite: #faebd7;
+  --green: #14d41a;
 
   // layout
   --section-padding-desktop: 24px;
