--- a/src/components/UI/Buttons/styles.module.scss
+++ b/src/components/UI/Buttons/styles.module.scss
@@ -12,3 +12,10 @@
   background-color: #fff;
   box-shadow: var(--button-shadow);
 }
+
+.arrowButton {
+  svg {
+    width: 40px;
+    height: 40px;
+  }
+}
