--- a/src/components/UI/Buttons/styles.module.scss
+++ b/src/components/UI/Buttons/styles.module.scss
@@ -19,3 +19,17 @@
     height: 40px;
   }
 }
+
+.iconButton {
+  width: 40px;
+  padding: 4px;
+
+  a {
+    display: flex;
+    flex-grow: 1;
+  }
+
+  svg {
+    flex-grow: 1;
+  }
+}
