--- a/src/components/PriceBlock/styles.module.scss
+++ b/src/components/PriceBlock/styles.module.scss
@@ -1,8 +1,11 @@
 .section {
   display: flex;
+  flex-direction: column;
   gap: var(--section-padding-mob);
+  padding-inline: var(--section-padding-mob);
 
   @media (min-width: 481px) {
+    flex-direction: initial;
     gap: var(--section-padding-desktop);
   }
 }
@@ -11,9 +14,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 50%;
   border: 2px solid var(--green);
   border-radius: 20px;
+
+  @media (min-width: 769px) {
+    width: 50%;
+  }
 }
 
 .title {
