--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,6 +24,7 @@
 
   // layout
   --layout-padding-horizontal: 32px;
+  --layout-padding-horizontal-mob: 16px;
 
   --border: 1px solid var(--border-color);
 }
