--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -4,12 +4,22 @@
   }
 }
 
-.aboutContent {
-  display: flex;
-  margin-top: 16px;
+.title {
+  text-align: center;
 
   @media (min-width: 769px) {
-    margin-top: 24px;
+    text-align: unset;
+  }
+}
+
+.content {
+  display: flex;
+  margin-top: 16px;
+}
+
+.text {
+  @media (min-width: 769px) {
+    max-width: 70%;
   }
 }
 
@@ -21,29 +31,5 @@
     display: block;
     bottom: 0;
     right: var(--section-padding-desktop);
-    width: 300px;
-  }
-}
-
-.aboutText {
-  font-size: 20px;
-  line-height: 28px;
-
-  @media (min-width: 769px) {
-    line-height: 32px;
-  }
-}
-
-.aboutTextIntro {
-  @media (min-width: 769px) {
-    max-width: 70%;
-  }
-}
-
-.aboutTextContinuing {
-  text-align: justify;
-
-  @media (min-width: 769px) {
-    max-width: 60%;
   }
 }
