--- a/src/components/UI/Buttons/styles.module.scss
+++ b/src/components/UI/Buttons/styles.module.scss
@@ -22,14 +22,16 @@
 
 .iconButton {
   width: 40px;
-  padding: 4px;
+  height: 40px;
 
   a {
-    display: flex;
-    flex-grow: 1;
+    display: block;
+    width: 100%;
+    height: 100%;
   }
 
   svg {
-    flex-grow: 1;
+    width: 100%;
+    height: 100%;
   }
 }
