--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
 :root {
   // fonts
-  --font-dancing: 'Dancing Script', cursive;
-  --font-nunito: 'Nunito Sans', sans-serif;
-  --font-exo2: 'Exo 2', sans-serif;
-  --font-caveat: 'Caveat', cursive;
+  --font-dancing: 'dancing', cursive;
+  --font-nunito: 'nunito', sans-serif;
+  --font-exo2: 'exo-2-semi-bold', sans-serif;
+  --font-caveat: 'caveat', cursive;
 
   // colors
   --main-text-color: #0a0e11;
