--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,19 +1,23 @@
 @font-face {
   font-family: 'caveat';
-  src: url('../assets/fonts/Caveat/Caveat-VariableFont_wght.ttf');
+  src: url('../assets/fonts/Caveat/Caveat-VariableFont_wght.ttf') format('woff2');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'exo-2-semi-bold';
-  src: url('../assets/fonts/Exo_2/static/Exo2-SemiBold.ttf');
+  src: url('../assets/fonts/Exo_2/static/Exo2-SemiBold.ttf') format('woff2');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'nunito';
-  src: url('../assets/fonts/Nunito_Sans/NunitoSans-Regular.ttf');
+  src: url('../assets/fonts/Nunito_Sans/NunitoSans-Regular.ttf') format('woff2');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'dancing';
-  src: url('../assets/fonts/Dancing_Script/DancingScript-VariableFont_wght.ttf');
+  src: url('../assets/fonts/Dancing_Script/DancingScript-VariableFont_wght.ttf') format('woff2');
+  font-display: swap;
 }
