common styles, slider behavior

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -18,8 +18,12 @@
 }
 
 .text {
+  text-align: center;
+  font-size: 20px;
+
   @media (min-width: 769px) {
     max-width: 70%;
+    text-align: unset;
   }
 }
 
