--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -16,8 +16,8 @@
   }
 
   h1 {
-    font-family: var(--font-dancing);
-    font-size: 36px;
+    font-family: var(--font-nunito);
+    font-size: 32px;
     font-weight: 700;
   }
 }
