--- a/src/components/Intro/styles.module.scss
+++ b/src/components/Intro/styles.module.scss
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 55%;
-    background-color: #23303d;
+    background-color: #9ebda5;
   }
 }
 
@@ -65,17 +65,17 @@
 }
 
 .projectTitle {
-  font-size: 22px;
-  line-height: 40px;
+  font-size: 20px;
+  line-height: 28px;
 }
 
 .projectName {
   font-size: 20px;
-  line-height: 38px;
+  line-height: 32px;
 }
 
 .projectSub {
-  font-size: 21px;
+  font-size: 20px;
   line-height: 32px;
   color: #23303d;
 }
@@ -83,6 +83,6 @@
 .text {
   margin-top: 24px;
   text-align: center;
-  font-size: 22px;
-  line-height: 28px;
+  font-size: 20px;
+  line-height: 23px;
 }
