--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,12 +9,12 @@
 body {
   background-color: var(--body-background);
   font-family: var(--font-nunito);
-  font-size: 22px;
-  line-height: 28px;
+  font-size: 18px;
+  line-height: 24px;
   color: var(--main-text-color);
 
   @media (min-width: 481px) {
-    font-size: 20px;
+    line-height: 22px;
   }
 }
 
@@ -33,13 +33,13 @@ section {
 }
 
 h2 {
-  font-family: var(--font-caveat);
-  font-size: 48px;
-  line-height: 48px;
+  font-family: var(--font-nunito);
+  font-size: 24px;
+  line-height: 16px;
+  font-weight: 700;
 
   @media (min-width: 481px) {
-    font-size: 54px;
-    line-height: 62px;
+    line-height: 20px;
   }
 }
 
