styles: minor changes

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -33,7 +33,7 @@
   @media (min-width: 769px) {
     position: absolute;
     display: block;
-    bottom: 0;
+    bottom: -75px;
     right: var(--section-padding-desktop);
   }
 }
