--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,7 +19,11 @@ body {
 }
 
 main {
-  margin-bottom: 54px;
+  margin-bottom: 24px;
+
+  @media (min-width: 481px) {
+    margin-bottom: 54px;
+  }
 }
 
 section {
