perf: slider, styles

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -27,6 +27,17 @@
   }
 }
 
+.textP1 {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.textP3 {
+  display: block;
+  margin-block: 4px;
+  font-family: var(--font-nunito-semi-bold);
+}
+
 .moodImage {
   display: none;
 
