--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 :root {
   // fonts
   --font-nunito: 'nunito', sans-serif;
+  --font-nunito-semi-bold: 'nunito-semi-bold', sans-serif;
   --font-exo2: 'exo-2-semi-bold', sans-serif;
 
   // colors
