--- a/src/components/ContactButtons/styles.module.scss
+++ b/src/components/ContactButtons/styles.module.scss
@@ -6,38 +6,38 @@
   }
 }
 
+.title {
+  text-align: center;
+}
+
+.buttonsWrapper {
+  display: flex;
+  gap: 16px;
+  margin-top: 24px;
+}
+
 .button {
-  position: relative;
-  width: 100%;
+  width: 50%;
   height: 45px;
   border-radius: 20px;
-
-  &:not(:last-child) {
-    margin-bottom: 16px;
-  }
 
   a {
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
-    padding-inline: 24px;
-
   }
 
   .text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 24px;
-    font-weight: 800;
+    font-size: 18px;
     color: #fff;
   }
 
   svg {
     width: 35px;
     max-height: 100%;
+    margin-right: 4px;
   }
 }
 
