--- a/src/components/Intro/styles.module.scss
+++ b/src/components/Intro/styles.module.scss
@@ -1,5 +1,5 @@
 .section {
-  margin-top: 18px;
+  margin-top: 0;
 }
 
 .sectionCard {
@@ -11,8 +11,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 55%;
+    height: 67%;
     background-color: #9ebda5;
+
+    @media (min-width: 769px) {
+      height: 55%;
+    }
   }
 }
 
@@ -72,12 +76,6 @@
 .projectName {
   font-size: 20px;
   line-height: 32px;
-}
-
-.projectSub {
-  font-size: 20px;
-  line-height: 32px;
-  color: #23303d;
 }
 
 .text {
