--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -9,3 +9,9 @@
   src: url('../assets/fonts/Nunito_Sans/NunitoSans-Regular.ttf') format('woff2');
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'nunito-semi-bold';
+  src: url('../assets/fonts/Nunito_Sans/NunitoSans-SemiBold.ttf') format('woff2');
+  font-display: swap;
+}
