--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,7 +9,7 @@
   --transparent: #0000;
   --body-background: #798579;
   --border-color: #23303d;
-  --card-background-color: #fff;
+  --card-background-color: #fffef7;
   --antiquewhite: #faebd7;
   --green: #14d41a;
 
@@ -19,7 +19,7 @@
 
   // shadows
   --button-shadow: 0 0 3px 0 var(--border-color);
-  --card-shadow: 0 4px 12px 4px #071f0282;
+  --card-shadow: 0 0 10px 2px #071f0282;
 
   // layout
   --layout-padding-horizontal: 32px;
