--- a/src/components/Intro/styles.module.scss
+++ b/src/components/Intro/styles.module.scss
@@ -4,6 +4,11 @@
 
 .sectionCard {
   position: relative;
+  padding-top: 0;
+
+  @media (min-width: 769px) {
+    padding-top: var(--section-padding-desktop);
+  }
 
   &::before {
     content: '';
@@ -11,8 +16,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 67%;
-    background-color: #9ebda5;
+    height: 71%;
+    background-color: #fffef7;
 
     @media (min-width: 769px) {
       height: 55%;
@@ -36,8 +41,13 @@
 
 .image {
   position: relative;
+  top: 20px;
   z-index: 0;
   border-radius: 5px;
+
+  @media (min-width: 769px) {
+    top: initial;
+  }
 }
 
 .cardWrapper {
@@ -55,7 +65,9 @@
   flex-direction: column;
   align-items: center;
   width: 107%;
-  background-color: var(--antiquewhite);
+  border-radius: 5px;
+  background-color: #294f36;
+  color: #fff;
 
   span {
     font-family: var(--font-exo2);
