--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,7 +11,7 @@
   --border-color: #23303d;
   --card-background-color: #fffef7;
   --antiquewhite: #faebd7;
-  --green: #14d41a;
+  --deep-green: #294f36;
 
   // layout
   --section-padding-desktop: 24px;
