--- a/src/components/Intro/styles.module.scss
+++ b/src/components/Intro/styles.module.scss
@@ -66,7 +66,7 @@
   align-items: center;
   width: 107%;
   border-radius: 5px;
-  background-color: #294f36;
+  background-color: var(--deep-green);
   color: #fff;
 
   span {
