--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@
   --font-nunito: 'nunito', sans-serif;
   --font-nunito-semi-bold: 'nunito-semi-bold', sans-serif;
   --font-exo2: 'exo-2-semi-bold', sans-serif;
+  --font-source-semi-bold: 'source-semi-bold', sans-serif;
 
   // colors
   --main-text-color: #0a0e11;
