--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -5,6 +5,7 @@
 }
 
 .title {
+  font-size: 21px;
   text-align: center;
 
   @media (min-width: 769px) {
@@ -21,22 +22,30 @@
   text-align: center;
   font-size: 20px;
 
+  span {
+    display: block;
+    margin-bottom: 12px;
+  }
+
   @media (min-width: 769px) {
     max-width: 70%;
     text-align: unset;
   }
 }
 
-.textP1 {
-  display: block;
-  margin-bottom: 8px;
-}
-
-.textP3 {
-  display: block;
-  margin-block: 4px;
+.boldText {
   font-family: var(--font-nunito-semi-bold);
 }
+
+//.textP1 {
+//  display: block;
+//  margin-bottom: 8px;
+//}
+//
+//.textP3 {
+//  display: block;
+//  margin-block: 4px;
+//}
 
 .moodImage {
   display: none;
