--- a/src/components/Slider/styles.module.scss
+++ b/src/components/Slider/styles.module.scss
@@ -1,11 +1,6 @@
 .sliderWrapper {
   position: relative;
-  width: 100%;
-  height: 400px;
-
-  @media (min-width: 481px) {
-    height: 80vh;
-  }
+  flex-grow: 1;
 }
 
 .img {
@@ -47,4 +42,15 @@
   width: 8px;
   height: 8px;
   border-radius: 50%;
+}
+
+.fallback {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  img {
+    height: 100%;
+  }
 }
